# Until-Extraction

./: .clang-format  CMakeLists.txt  README.md
src/: main.cpp
src/GameEngine/: AssetManager.cpp  AssetManager.hpp  Game.cpp  Game.hpp  InputManager.cpp  InputManager.hpp  State.hpp  StateMachine.cpp  StateMachine.hpp
src/Screens/: GameState.cpp  GameState.hpp  MainMenuState.cpp  MainMenuState.hpp  SplashScreenState.cpp  SplashScreenState.hpp  TileMap.cpp  TileMap.hpp
src/Sprites/: Enemy.cpp  Enemy.hpp  Player.cpp  Player.hpp  Sprite.cpp  Sprite.hpp
